...
                  style={{ marginTop: 8 }}
                />
              )}
            </SettingsTitledContentBox>

            <SettingsTitledContentBox
              heading="AUDIO DATA"
              headingBadge={audioExt || undefined}
              containerStyle={styles.audioContentBox}
            >
              {hasTrack ? (
                <View>
                  <Text style={styles.audioTitle} numberOfLines={3}>
...
                    <ActionButton
                      label={<>Change{'\n'}Track</>}
                      iconName="arrow-right-arrow-left"
                      iconSize={20}
                      containerClassName={styles.changeTrackButtonContainer}
                      onPress={() => setShowTrackPicker(true)}
                      testID="change-track-button"
                    />
                  </View>
                </View>
              ) : (
                <View style={styles.audioButtonWrapper}>
                  <ActionButton
...
