...
        navigation.navigate('QuickMemo', { source: 'Drafts' }),
      onPressListButton: () => navigation.navigate('MemoList', {}),
      showListButton: memosHasItems,
      addButtonTestID: 'drafts-quick-memo-button',
    },
    {
      addButtonLabel: 'QUICK RECORD',
      listButtonLabel: 'RECORD LIST',
      onPressAddButton: () =>
        navigation.navigate('QuickRecord', { source: 'Drafts' }),
      onPressListButton: () => navigation.navigate('RecordList', {}),
      showListButton: recordsHasItems,
      addButtonTestID: 'drafts-quick-record-button',
    },
  ];

  return (
    <HomeTabsScreenTemplate
      title="DRAFTS"
...
