export const PLACEHOLDERS = {
  signIn: {
    emailInput: 'メールアドレスを入力してください',
    passwordInput: 'パスワードを入力してください',
  },
  passwordReset: {
    emailInput: 'メールアドレスを入力してください',
    newPasswordInput: '新しいパスワードを入力してください',
    codeInput: '6桁の認証コードを入力してください',
  },
  register: {
    usernameInput: 'ユーザー名を入力してください',
    emailInput: 'メールアドレスを入力してください',
    passwordInput: 'パスワードを入力してください',
    codeInput: '6桁の認証コードを入力してください',
  },
  profileEdit: {
    usernameInput: 'ユーザー名を入力してください',
    emailInput: 'メールアドレスを入力してください',
  },
  audioPlayer: {
    trackNameInput: 'トラック名を入力してください',
  },
  titleInput: 'タイトルを入力してください',
  bodyInput: 'ここに内容を入力できます',
  projectEdit: {
    cueLabelInput: 'キューポイント名を入力してください',
  },
};
