...
      <HeaderToolBar items={items} />
      <ScrollView>
        <Artwork
          artwork={
            currentTrack.artwork ? { uri: currentTrack.artwork } : undefined
          }
          testID="audio-player-artwork"
        />
        <View style={styles.infoWrapper}>
          <Text style={styles.title} testID="audio-player-title">{currentTrack.title}</Text>
          <View style={styles.dataInfo}>
            <Text style={styles.updateAt}>
              {formatDate(new Date(currentTrack.updatedAt))} UPLOAD
            </Text>
            <ExtensionLabel label={currentTrack.extention} />
          </View>
...
